--- a/block/ibose/index.html
+++ b/block/ibose/index.html
@@ -6,9 +6,9 @@
 		<title>iBOS/e</title>
 		
 		<link rel="stylesheet" type="text/css" href="../../scripts/ext6/build/classic/theme-neptune-touch/resources/theme-neptune-touch-all.css">
+		<link rel="stylesheet" type="text/css" href="./css/icon.css">
 		<script src="../../scripts/ext6/build/ext-all-debug.js"></script>
 		<script src="./Application.js" ></script>
-
 	</head>
 <body>
 </body>
